Better code for center offset panning. Fix truck icon not showing up in mobile. Separate "You are here" popup styles from code.

--- a/css/styles.less
+++ b/css/styles.less
@@ -175,14 +175,15 @@ header {
             font-size: 24px;
             line-height: 36px;
             font-weight: normal;
-            background: transparent url('../img/truck-icon.png') left top 9px no-repeat;
+            background: transparent url('../img/truck-icon.png') no-repeat;
             background-size: 36px 20px;
+            background-position: left top 9px;
             @media @mobile, @tablet, @landscape {
                 line-height: 18px;
                 font-size: 14px;
                 padding-left: 32px;
                 background-size: 25px 14px;
-                background-position: left top 2px;
+                background-position: left top 3px;
             }
         }
         @media @mobile, @tablet, @landscape {
@@ -609,6 +610,10 @@ div.footer-popup {
     margin: 0 !important;
 }
 
+#popup-here {
+    text-align: center;
+    margin: 0 10px
+}
 
 // TYPICON SIZE OVERRIDE
 .typcn {
